<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:id="@+id/nc_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_padding"
            tools:context="com.nilesh.popularmovies.DetailActivity">

            <ImageView
                android:id="@+id/details_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/movie_poster"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_title"
                app:srcCompat="@mipmap/ic_launcher" />


            <TextView
                android:id="@+id/details_title"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="@dimen/seventyfive_dp"
                android:background="@color/colorPrimaryLight"
                android:gravity="center_vertical"
                android:text="@string/blank"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Some Title" />

            <TextView
                android:id="@+id/details_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sixteen_dp"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:text="@string/blank"
                app:layout_constraintStart_toEndOf="@+id/details_poster"
                app:layout_constraintTop_toBottomOf="@+id/details_title"
                tools:text="Some Release Date" />


            <TextView
                android:id="@+id/plot_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight_dp"
                android:gravity="start|center"
                android:text="@string/plot"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sixteen_sp"
                android:focusableInTouchMode="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_poster" />

            <TextView
                android:id="@+id/details_overview"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plot_title"
                tools:text="Some Plot Synopsis / Overview" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/detail_trailers_rv"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="@dimen/twohundredfifty_dp"
                android:layout_marginEnd="@dimen/eight_dp"
                android:layout_marginStart="@dimen/eight_dp"
                android:layout_marginTop="@dimen/eight_dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/detail_reviews_rv"
                android:layout_width="@dimen/threesixtwo_dp"
                android:layout_height="@dimen/twohundredfifty_dp"
                android:layout_marginBottom="@dimen/eight_dp"
                android:layout_marginEnd="@dimen/eight_dp"
                android:layout_marginStart="@dimen/eight_dp"
                android:layout_marginTop="@dimen/eight_dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight_dp"
                android:text="@string/trailers"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="@+id/details_poster"
                app:layout_constraintTop_toBottomOf="@+id/divider1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight_dp"
                android:text="@string/comments"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_Fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/eight_dp"
                android:layout_marginTop="@dimen/eight_dp"
                android:clickable="true"
                android:onClick="toggleFav"
                app:layout_constraintBottom_toBottomOf="@+id/details_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_title"
                app:srcCompat="@android:drawable/btn_star_big_off"
                android:focusable="true" />

            <TextView
                android:id="@+id/details_user_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:text="@string/blank"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/details_release_date"
                app:layout_constraintTop_toBottomOf="@+id/details_release_date"
                tools:text="Some User Rating / Vote Average" />


            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginEnd="@dimen/eight_dp"
                android:layout_marginStart="@dimen/eight_dp"
                android:layout_marginTop="@dimen/eight_dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_overview" />


            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginEnd="@dimen/eight_dp"
                android:layout_marginStart="@dimen/eight_dp"
                android:layout_marginTop="@dimen/eight_dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_trailers_rv" />



        </android.support.constraint.ConstraintLayout>


    </ScrollView>
</layout>

